# engineering-os

./: .env.example  .gitignore  .gitleaks.toml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  lefthook.yml  mkdocs.yml  package.json  projects.example.tsv  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  secret-scan.yml
ai-vault-template/: README.md
ai-vault-template/identity/: self.md
ai-vault-template/interaction-rules/: working-with-the-user.md
ai-vault-template/observations/: example-observation.md
docs/: architecture.md  boundary.md  concepts.md  domains.md  index.md  quickstart.md  rag.md  standards.md  working-layer.md
docs/assets/: extra.css
rag/: Cargo.toml  README.md  biome.json  build_index.py  package.json  pnpm-lock.yaml  routing.example.json  server.py  tsconfig.json  vaults.example.json  vitest.config.ts
rag-rs/: Cargo.toml  README.md
rag-rs/src/: chunk.rs  config.rs  embed.rs
rag/src/: chunk.rs  chunk.test.ts  chunk.ts  cli.ts  config.rs  config.test.ts  config.ts  db.rs  db.test.ts  db.ts  e2e.test.ts  embed.rs  embed.ts  index.rs  indexer.test.ts  indexer.ts  main.rs  server.rs  server.test.ts  server.ts
rag/tests/: e2e.rs
scripts/: anonymization-check.sh  setup.sh
standards/: README.md
standards/.claude-plugin/: marketplace.json  plugin.json
standards/agents/: README.md
standards/canonical/: README.md  agent-security.md  behavioral-principles.md  (+3 more)
user-vault-template/: README.md
(+27 files in other folders)
