[project]
name = "engineering-os-rag"
version = "0.1.0"
description = "Local hybrid RAG layer for engineering-os: SQLite + sqlite-vec + FTS5 over Obsidian vaults"
readme = "rag/README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.3",
    "sqlite-vec>=0.1.6",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
watch = ["watchdog>=5.0"]
docs = ["mkdocs-material>=9.6"]
dev = ["ruff>=0.8", "pytest>=8.3"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["rag"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = false
