[package]
name = "engineering-os-rag"
version = "0.1.0"
edition = "2024"
description = "Local hybrid RAG layer for engineering-os: fastembed + SQLite (sqlite-vec + FTS5), single binary, no PyTorch"
license = "MIT"

[[bin]]
name = "eos-rag"
path = "src/main.rs"

[dependencies]
fastembed = "5"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
sqlite-vec = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
